crates/davimci-mlt/src/snapshots/davimci_mlt__xml__tests__golden_two_track_timeline.snap
---
source: crates/davimci-mlt/src/xml.rs
expression: "to_xml(&Projection::of(&tl))"
---
<?xml version="1.0" encoding="utf-8"?>
<mlt LC_NUMERIC="C" version="7" producer="tractor0">
  <profile description="davimci" width="1920" height="1080" progressive="1" sample_aspect_num="1" sample_aspect_den="1" display_aspect_num="1920" display_aspect_den="1080" frame_rate_num="60" frame_rate_den="1" colorspace="709"/>
  <producer id="p0_0" in="0" out="99">
    <property name="mlt_service">color</property>
    <property name="resource">#ff000000</property>
    <property name="davimci.clip">c3</property>
    <property name="davimci.label">a</property>
  </producer>
  <producer id="p0_2" in="0" out="49">
    <property name="mlt_service">color</property>
    <property name="resource">#ff000000</property>
    <property name="davimci.clip">c4</property>
    <property name="davimci.label">b</property>
  </producer>
  <producer id="p1_0" in="0" out="199">
    <property name="mlt_service">color</property>
    <property name="resource">#ff000000</property>
    <property name="davimci.clip">c5</property>
    <property name="davimci.label">c</property>
  </producer>
  <playlist id="playlist0" davimci.track="V1">
    <entry producer="p0_0" in="0" out="99"/>
    <blank length="50"/>
    <entry producer="p0_2" in="0" out="49"/>
  </playlist>
  <playlist id="playlist1" davimci.track="A1">
    <entry producer="p1_0" in="0" out="199"/>
  </playlist>
  <tractor id="tractor0">
    <track producer="playlist0" hide="0"/>
    <track producer="playlist1" hide="1"/>
  </tractor>
</mlt>
